--- a/site/style.css
+++ b/site/style.css
@@ -7,3 +7,43 @@ body {
     background-position: center top;
     background-size: cover;
 }
+main {
+    min-width: 150px;
+    max-width: 300px;
+    margin: auto;
+    padding: 35px;
+    background-color: white;
+    border-radius: 35px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.195);
+}
+.logo{
+    display: block;
+    margin: auto;
+    margin-bottom: 20px ;
+}
+input.campos{
+    display: block;
+    margin: auto;
+    width: 180px;
+    margin: 10px auto;
+    padding: 10px;
+    border-radius: 45px;
+    border-color: rgba(255, 255, 255, 0);
+    background-color: rgb(245, 245, 245);
+}
+
+input.bt {
+    display: block;
+    margin: auto;
+    min-width: 120px;
+    max-width: 240px;
+    border-radius: 45px;
+    border-color: rgba(255, 255, 255, 0);
+    background-color: #008AD8;
+    color: white;
+    padding: 5.5px;
+}
+.divisor{
+    margin: 20px auto;
+    width: 225px;
+}
