--- a/style/style.css
+++ b/style/style.css
@@ -28,7 +28,7 @@ main {
     margin: auto;
     margin-bottom: 20px ;
 }
-input.campos{
+.campos{
     display: block;
     margin: auto;
     width: 180px;
