--- a/style/style.css
+++ b/style/style.css
@@ -2,58 +2,29 @@
 * {
     font-family: Arial, Helvetica, sans-serif;
 }
-
-:root {
-    --cor01: #008AD8;
-    --cor02: #31D8BA;
-}
-
 body {
-    background-image: url(imagens/bg.png);
-    background-position: center top;
-    background-size: cover;
-}
-main {
-    display: block;
-    min-width: 150px;
-    max-width: 300px;
-    margin: auto;
-    padding: 35px;
-    background-color: white;
-    border-radius: 35px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.195);
-}
-.logo{
-    display: block;
-    margin: auto;
-    margin-bottom: 20px ;
-}
-.campos{
-    display: block;
-    margin: auto;
-    width: 180px;
-    margin: 10px auto;
-    padding: 10px;
-    border-radius: 45px;
-    border-color: rgba(255, 255, 255, 0);
-    background-color: rgb(245, 245, 245);
+    background-image: url('../imagens/background.png');
+    background-repeat: repeat-y;
+    background-size: contain;
 }
 
-input.bt {
-    display: block;
-    margin: auto;
-    min-width: 120px;
-    max-width: 240px;
-    border-radius: 45px;
-    border-color: rgba(255, 255, 255, 0);
-    background-color: var(--cor01);
-    color: white;
-    padding: 5.5px;
+
+section {
+    max-width: 1060px;
+    min-width: 600px;
+    background-color: rgba(255, 255, 255, 0.6);
+    padding: 37px 80px;
+    margin: 20px 80px;
+    border-radius: 30px;
+    box-shadow: 0px 0px 35px rgba(0, 0, 0, 0.1);
 }
-input.bt:hover {
-    background-color: var(--cor02);
-}
-.divisor{
-    margin: 15px auto;
-    width: 225px;
+
+header, section#inicio {
+    max-width: 1060px;
+    min-width: 600px;
+    background-color: rgba(255, 255, 255, 0.6);
+    padding: 37px 80px;
+    margin: 0px 80px 0px 80px;
+    border-radius: 0px;
+    box-shadow: 0px 0px 35px rgba(0, 0, 0, 0.1);
 }
