--- a/style/style.css
+++ b/style/style.css
@@ -11,20 +11,20 @@ body {
 
 section {
     max-width: 1060px;
-    min-width: 600px;
+    min-width: 450px;
     background-color: rgba(255, 255, 255, 0.6);
-    padding: 37px 80px;
-    margin: 20px 80px;
+    padding: 37px 40px;
+    margin: 20px auto;
     border-radius: 30px;
     box-shadow: 0px 0px 35px rgba(0, 0, 0, 0.1);
 }
 
 header, section#inicio {
     max-width: 1060px;
-    min-width: 600px;
+    min-width: 450px;
     background-color: rgba(255, 255, 255, 0.6);
-    padding: 37px 80px;
-    margin: 0px 80px 0px 80px;
+    padding: 37px 40px;
+    margin: 0px auto;
     border-radius: 0px;
     box-shadow: 0px 0px 35px rgba(0, 0, 0, 0.1);
 }
