--- a/style/style.css
+++ b/style/style.css
@@ -1,30 +1,43 @@
 @charset "UTF-8";
 * {
-    font-family: Arial, Helvetica, sans-serif;
+    margin: 0px;
+    padding: 0px;
+    border: 0px;
 }
 body {
+    font-family: Arial, Helvetica, sans-serif;
     background-image: url('../imagens/background.png');
     background-repeat: repeat-y;
-    background-size: contain;
+    background-size: cover;
+    max-width: 1200px;
+    padding: 0px 120px;
+}
+header{
+    min-width: 350px;
+    max-width: 900px;
+    margin: 40px auto 40px auto;
+    text-align: center;
+    padding: 40px 40px 0px 40px;
+    background-color: rgba(255, 255, 255, 0.90);
+    border-radius: 30px;
+    box-shadow: 0px 0px 35px rgba(0, 0, 0, 0.1);
+}
+section#inicio {
+    min-width: 350px;
+    max-width: 900px;
+    margin: 40px auto 0px auto;
+    text-align: center;
+    padding: 40px 0px 40px 0px;
 }
 
 
-section {
-    max-width: 1060px;
-    min-width: 450px;
+section.gerais {
+    min-width: 350px;
+    max-width: 900px;
+    margin: 40px auto;
     background-color: rgba(255, 255, 255, 0.6);
     padding: 37px 40px;
-    margin: 20px auto;
     border-radius: 30px;
     box-shadow: 0px 0px 35px rgba(0, 0, 0, 0.1);
 }
 
-header, section#inicio {
-    max-width: 1060px;
-    min-width: 450px;
-    background-color: rgba(255, 255, 255, 0.6);
-    padding: 37px 40px;
-    margin: 0px auto;
-    border-radius: 0px;
-    box-shadow: 0px 0px 35px rgba(0, 0, 0, 0.1);
-}
