--- a/site/style.css
+++ b/site/style.css
@@ -12,7 +12,8 @@ body {
     background-image: url(imagens/bg.png);
     background-position: center top;
     background-size: cover;
-    position: relative;
+
+    height: 98vh;
 }
 main {
     display: block;
@@ -23,11 +24,6 @@ main {
     background-color: white;
     border-radius: 35px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.195);
-
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%);
 }
 .logo{
     display: block;
