--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,1 +1,24 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
+
+* {
+    font-family: 'Montserrat', Tahoma, sans-serif;
+    margin: 0px;
+    border: 0px;
+    box-sizing: border-box;
+}
+
+:root {
+  --cor001: #008BF5; /* Azul */
+  --cor002: #1B998B; /* Verde Mediano*/
+  --cor003: #084C61; /* Verde Escuro */
+  --cor004: #172A3A; /* Azul Escuro*/
+  --cor005: #E2DADB; /* Giz */
+  --cor006: #25D0BC; /* Verde Claro */
+  --cor007: #39393A; /* Cinza Escuro */
+  --cor008: #FF6B35; /* Laranja - Terciária */
+  --cor009: #D6C108; /* Amarelo - Terciária */
+
+  --fonte01: 'Montserrat', Tahoma, sans-serif;
+  --fonte02: 'Roboto Condensed', 'Montserrat', Tahoma, sans-serif;
+}
