--- a/estilos/style.css
+++ b/estilos/style.css
@@ -23,13 +23,14 @@
   --fonte02: 'Roboto Condensed', 'Montserrat', Tahoma, sans-serif;
 }
 
-body, html{
+html {
     background-color: #DDF2F1;
     height: 100vh;
     width: 100vw;
 }
 
 header {
+    display: block;
     margin: 40px 10px 20px 10px;
     padding: 0px 20px;
 
@@ -38,18 +39,51 @@ header {
     box-shadow: 0px 0px 11.33px rgba(0, 0, 0, 0.10);
 }
 
+
+
+/* --- HEADER --- */
 section#header {
+    display: flex;
     padding: 30px 0px;
 }
 
-div#esquerda{
-    
+div.extremidade{
+    flex-basis: 15%;
 }
 
 div#central {
-
+    flex-basis: 70%;
+    text-align: center;
 }
 
-div#direita {
+/* --- CONTADOR ---*/
+div#divContador {
+    text-align: right;
+}
+div#divContador > p {
+    display: inline-block;
+}
+div#divContador > img {
+    display: inline-block;
+}
 
+
+
+/* --- SECTION 1 --- */
+section#home {
+    display: block;
+    overflow: hidden;
+
+    padding: 30px 0px;
+}
+
+div.divisor {
+    width: 50%;
+    float: left;
+}
+
+div.imagem {
+    width: 50%;
+    float: right;
+    text-align: right;
 }
