--- a/estilos/style.css
+++ b/estilos/style.css
@@ -60,6 +60,10 @@ div#central {
 div#divContador {
     text-align: right;
 }
+span#menu {
+    color: var(--cor003);
+    font-weight: bold;
+}
 div#divContador > p {
     display: inline-block;
 }
@@ -77,13 +81,97 @@ section#home {
     padding: 30px 0px;
 }
 
-div.divisor {
+div.infos {
     width: 50%;
     float: left;
 }
 
+div.infos > h1 {
+    font-family: var(--fonte02);
+    font-size: 3.35em;
+    font-weight: bold;
+
+    -webkit-text-stroke: 1px var(--cor001);
+
+    color: var(--cor001);
+    line-height: 1em;
+}
+
+p.slide-text {
+    margin: 25px 0px 10px 0px;
+    font-family: var(--fonte01);
+    font-weight: 400;
+    font-size: 1.05em;
+    color: var(--cor007);
+}
+.pagerItem {
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+
+    border-radius: 50%;
+    margin: 10px 5px;
+    background-color: rgba(37, 208, 188, 0.45);
+}
+
+.home {
+    background-color: var(--cor001);
+    padding: 5px 30px;
+    border-radius: 25px;
+
+    color: white;   
+    font-family: var(--fonte02);
+    font-weight: bold; 
+    font-size: 1.45em;
+}
+
+/* --- SLIDER PARÁGRAFO --- */
+/* Parágrafo */
+#t01 {
+
+}
+#t02 {
+    display: none;
+}
+#t03 {
+    display: none;
+}
+
+/* Pager Ativo */
+.pagerItem:active {
+    display: inline-block;
+    width: 12px;
+    height: 12px;
+
+    background-color: rgba(37, 208, 188, 0.95);
+
+    transition-duration: 0.85s;
+}
+
+/* Botão */
+#b01 {
+
+}
+#b02 {
+    display: none;
+}
+#b03 {
+    display: none;
+}
+
+
+
+/* --- IMAGEM --- */
 div.imagem {
     width: 50%;
+    min-height: 250px;
+    max-height: 300px;
     float: right;
-    text-align: right;
+
+    background-image: url(../imagens/matt/mattLight200px.png);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: contain;
+
+    margin: auto;
 }
