--- a/estilos/style.css
+++ b/estilos/style.css
@@ -44,134 +44,30 @@ header {
 /* --- HEADER --- */
 section#header {
     display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center ;
+    align-content: center;
+    column-gap: 30px;
     padding: 30px 0px;
-}
-
-div.extremidade{
-    flex-basis: 15%;
 }
 
 div#central {
-    flex-basis: 70%;
-    text-align: center;
-}
+    width: 120px;
+    height: 34px;
 
-/* --- CONTADOR ---*/
-div#divContador {
-    text-align: right;
-}
-span#menu {
-    color: var(--cor003);
-    font-weight: bold;
-}
-div#divContador > p {
-    display: inline-block;
-}
-div#divContador > img {
-    display: inline-block;
-}
-
-
-
-/* --- SECTION 1 --- */
-section#home {
-    display: block;
-    overflow: hidden;
-
-    padding: 30px 0px;
-}
-
-div.infos {
-    width: 50%;
-    float: left;
-}
-
-div.infos > h1 {
-    font-family: var(--fonte02);
-    font-size: 3.35em;
-    font-weight: bold;
-
-    -webkit-text-stroke: 1px var(--cor001);
-
-    color: var(--cor001);
-    line-height: 1em;
-}
-
-p.slide-text {
-    margin: 25px 0px 10px 0px;
-    font-family: var(--fonte01);
-    font-weight: 400;
-    font-size: 1.05em;
-    color: var(--cor007);
-}
-.pagerItem {
-    display: inline-block;
-    width: 10px;
-    height: 10px;
-
-    border-radius: 50%;
-    margin: 10px 5px;
-    background-color: rgba(37, 208, 188, 0.45);
-}
-
-.home {
-    background-color: var(--cor001);
-    padding: 5px 30px;
-    border-radius: 25px;
-
-    color: white;   
-    font-family: var(--fonte02);
-    font-weight: bold; 
-    font-size: 1.45em;
-}
-
-/* --- SLIDER PARÁGRAFO --- */
-/* Parágrafo */
-#t01 {
-
-}
-#t02 {
-    display: none;
-}
-#t03 {
-    display: none;
-}
-
-/* Pager Ativo */
-.pagerItem:active {
-    display: inline-block;
-    width: 12px;
-    height: 12px;
-
-    background-color: rgba(37, 208, 188, 0.95);
-
-    transition-duration: 0.85s;
-}
-
-/* Botão */
-#b01 {
-
-}
-#b02 {
-    display: none;
-}
-#b03 {
-    display: none;
-}
-
-
-
-/* --- IMAGEM --- */
-div.imagem {
-    width: 50%;
-    min-height: 250px;
-    max-height: 300px;
-    float: right;
-
-    background-image: url(../imagens/matt/mattLight200px.png);
+    background-image: url(../imagens/Aqua\ Logo\ 120px.png);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: contain;
-
-    margin: auto;
 }
+
+div#divContador {
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
+    align-items: center;
+    align-content: center;
+    column-gap: 5px;
+}
+
