--- a/estilos/style.css
+++ b/estilos/style.css
@@ -32,7 +32,7 @@ html {
 header {
     display: block;
     margin: 40px 10px 20px 10px;
-    padding: 0px 20px;
+    padding: 30px 20px;
 
     background-color: rgba(255, 255, 255, 0.95);
     border-radius: 15px;
@@ -49,7 +49,8 @@ section#header {
     align-items: center ;
     align-content: center;
     column-gap: 30px;
-    padding: 30px 0px;
+
+    margin-bottom: 60px;
 }
 
 /* Menu */
@@ -96,23 +97,28 @@ section#home {
 
 /* -- Div FILHO -- */
 div.infos {
-
+    flex-basis: 55%;
 }
 
 /* H1 */
 header > section#home > div.infos > h1 {
     font-family: var(--fonte02);
     -webkit-text-stroke: 1.15px var(--cor001);
-    font-size: 3.25em;
+    font-size: 3.85em;
     color: var(--cor001);
+    line-height: 1em;
+
+    margin-bottom: 25px;
 }
 
 /* Parágrafos */
 header > section#home > div.infos  p {
     font-family: var(--fonte01);
-    font-size: 1.05em;
+    font-size: 1.30em;
 
     color: var(--cor007);
+
+    margin-bottom: 10px;
 }
 
 /* Pagers */
@@ -138,9 +144,11 @@ header > section#home > div.infos button {
 
     font-family: var(--fonte02);
     color: white;
-    font-size: 1.2em;
+    font-size: 1.35em;
     font-weight: 600;
     font-variant: small-caps;
+
+    margin-top: 10px;
 }
 
 /* Slides */
@@ -152,10 +160,11 @@ p#t02, p#t03, #b02, #b03 {
 
 /* -- DIV FILHO Imagem -- */
 div.imagem {
-    min-width: 107px;
-    min-height: 204px;
+    min-height: 25vh;
+    
+    flex-basis: 45%;
 
-    background-image: url(../imagens/matt/mattLight200px.png);
+    background-image: url(../imagens/matt/mattLight400px.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center center;
