--- a/estilos/style.css
+++ b/estilos/style.css
@@ -97,24 +97,24 @@ section#home {
 
 /* -- Div FILHO -- */
 div.infos {
-    flex-basis: 50%;
+    flex-basis: 55%;
 }
 
 /* H1 */
 header > section#home > div.infos > h1 {
     font-family: var(--fonte02);
     -webkit-text-stroke: 1.15px var(--cor001);
-    font-size: 3.65em;
+    font-size: 2.90em;
     color: var(--cor001);
     line-height: 1em;
 
-    margin-bottom: 25px;
+    margin-bottom: 20px;
 }
 
 /* Parágrafos */
 header > section#home > div.infos  p {
     font-family: var(--fonte01);
-    font-size: 1.15em;
+    font-size: 0.9em;
 
     color: var(--cor007);
 
@@ -160,9 +160,10 @@ p#t02, p#t03, #b02, #b03 {
 
 /* -- DIV FILHO Imagem -- */
 div.imagem {
-    min-height: 20vh;
+    height: 300px;
+    width: 284px;
     
-    flex-basis: 50%;
+    flex-basis: 45%;
 
     background-image: url(../imagens/matt/mattLight400px.png);
     background-size: contain;
