--- a/estilos/style.css
+++ b/estilos/style.css
@@ -60,8 +60,17 @@ div#btmenu {
     color: var(--cor003);
 }
 
-div#menu {
+menu#menu {
     display: none;
+    position: fixed; /* ou absolute */
+    top: 10px;
+    left: 0;
+    width: 80%;
+    height: 95%;
+    z-index: 9999;
+    background-color: var(--cor005);
+
+    color: var(--cor007);
 }
 
 /* Logo */
