--- a/estilos/style.css
+++ b/estilos/style.css
@@ -70,7 +70,7 @@ button#btmenu:hover {
 }
 
 menu#menu {
-    display: none;
+    display: block;
     position: fixed; /* ou absolute */
     top: 10px;
     left: 0;
