--- a/estilos/style.css
+++ b/estilos/style.css
@@ -231,7 +231,7 @@ header > section#home > div.infos > h1 {
 /* Parágrafos */
 header > section#home > div.infos p, p.txt {
     font-family: var(--fonte01);
-    font-size: 0.92em;
+    font-size: 0.9em;
 
     color: var(--cor007);
 
@@ -293,7 +293,7 @@ div#mattoi {
 }
 h2 {
     text-align: right;
-    font-size: 2.95em;
+    font-size: 2.85em;
     font-family: var(--fonte02);
     -webkit-text-stroke: 1.25px var(--cor002);
     color: var(--cor002);
@@ -301,11 +301,11 @@ h2 {
     margin-bottom: 20px;
 }
 p#oi {
-    font-size: 0.92em;
+    font-size: 0.9em;
     text-align: right;
 }
 #b02 {
-    font-size: 0.89em;
+    font-size: 0.83em;
     background-color: var(--cor002);
 }
 
@@ -318,4 +318,36 @@ p#oi {
     background-color: rgba(255, 255, 255, 0.95);
     border-radius: 15px;
     box-shadow: 0px 0px 11.33px rgba(0, 0, 0, 0.10);
+}
+
+
+/* DICAS */
+div#introDicas {
+    margin-bottom: 20px;
+}
+div#introDicas > h2 {
+    text-align: left;
+    line-height: 0.92em;
+    font-size: 3.3em;
+
+    margin-bottom: -30px;
+}
+div#introSup {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
+    align-items: flex-end;
+}
+div#introSup > p {
+    flex-basis: 65%;}
+div#imgSq  {
+    width: 126px;
+    height: 110px;
+    flex-basis: 35%;
+
+    background-image: url(../imagens/squeezes252px.png);
+    background-position: bottom center;
+    background-repeat: no-repeat;
+    background-size: contain;
 }
