--- a/estilos/style.css
+++ b/estilos/style.css
@@ -29,6 +29,11 @@ html {
     width: 100vw;
 }
 
+::-webkit-scrollbar {
+    width: 0px;
+    height: 0px;
+}
+
 header, .aba {
     display: block;
     margin: 20px 10px 20px 10px;
