--- a/estilos/style.css
+++ b/estilos/style.css
@@ -361,3 +361,45 @@ div#imgSq  {
     background-size: contain;
 }
 
+/* -- AREA DESLIZANTE - Dicas -- */
+/* Configurações */
+div#area-deslizante {
+    overflow-x: scroll;
+    overflow-y: hidden;
+    white-space: nowrap;
+}
+.conteudoDicas {
+    display: inline-block;
+    width: 200px;
+    height: 310px;
+
+    background-color: var(--cor005);
+}
+/* Imagens - Dicas */
+div#imgGelo {
+    width: 180px;
+    height: 170px;
+
+    background-image: url(../imagens/gelo215px.png);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+div#Timer {
+    width: 180px;
+    height: 170px;
+
+    background-image: url(../imagens/gelo215px.png);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+div#Squeezes {
+    width: 180px;
+    height: 170px;
+
+    background-image: url(../imagens/gelo215px.png);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: contain;
+}
