--- a/estilos/style.css
+++ b/estilos/style.css
@@ -406,7 +406,7 @@ div#imgSqueezes {
     width: 180px;
     height: 170px;
 
-    background-image: url(../imagens/squeezes210px.png);
+    background-image: url(../imagens/squeeze210px.png);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: contain;
