--- a/estilos/style.css
+++ b/estilos/style.css
@@ -556,4 +556,17 @@ button[title]:hover:after {
 button[title]:hover:after {
     opacity: 1;
 }
+
+input[type="number"] {
+    font-size: 2.25em;
+    font-family: var(--fonte01);
+    font-weight: 700;
+    color: var(--cor001);
+
+    display: inline-block;
+    width: 100%;
+}
+div#questSlider {
+    display: flex;
+}
   
