--- a/estilos/style.css
+++ b/estilos/style.css
@@ -478,12 +478,15 @@ button.tooltip {
 
     margin-left: 5px;
 }
+
+
+/* RADIO */
 .primeiroRadio {
     display: flex;
     width: 70%;
 
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-between; 
 }
 input[type="radio"] {
      /* oculta o botão de opção padrão */
@@ -497,7 +500,6 @@ input[type="radio"] {
      height: 14px;
      display: inline-block;
      position: relative;
-     margin-right: 8px;
 }
 input[type="radio"]:checked::before {
     /* adiciona um ponto para indicar que a opção foi selecionada */
@@ -506,7 +508,7 @@ input[type="radio"]:checked::before {
     line-height: 16px;
     display: block;
     position: absolute;
-    top: -6.457px;
+    top: -6.75px;
     left: -1.9px;
     color: var(--cor003);
     -webkit-text-stroke: 1.5px var(--cor003
@@ -518,6 +520,16 @@ label {
     font-size: 0.9em;
 }
 
+
+.primeiroRadio > label {
+    display: flex;
+    align-items: center;
+
+    column-gap: 5px;
+}
+
+
+/* TOOLTIP - DICA */
 /* Estilizando a dica de ferramenta */
 button[title] {
     position: relative;
@@ -551,12 +563,17 @@ button[title]:hover:after {
     opacity: 0;
     width: 200px;
 }
-  
-  /* Animação da dica de ferramenta personalizada */
+    /* Animação da dica de ferramenta personalizada */
 button[title]:hover:after {
     opacity: 1;
 }
+button[title]:hover:before {
+  /* Outras propriedades CSS existentes... */
+  pointer-events: none;
+}
 
+
+/* SLIDE - Peso */
 input[type="number"] {
     font-size: 2.25em;
     font-family: var(--fonte01);
@@ -564,7 +581,6 @@ input[type="number"] {
     color: var(--cor001);
 
     display: inline-block;
-    width: 100%;
 }
 div#questSlider {
     display: flex;
