--- a/estilos/style.css
+++ b/estilos/style.css
@@ -605,6 +605,8 @@ p#quilo {
     font-variant: small-caps;
 
     margin: -5px 0px 5px 0px;
+
+    text-align: center;
 }
   
 
@@ -620,49 +622,125 @@ input[type="range"] {
     outline: none; /* Remove a borda de foco */
 
     margin-bottom: 10px;
-  }
+}
   
-  /* Estilização para o polegar do input de tipo range */
-  input[type="range"]::-webkit-slider-thumb {
+/* Estilização para o polegar do input de tipo range */
+input[type="range"]::-webkit-slider-thumb {
     -webkit-appearance: none; /* Remove o estilo padrão do navegador (apenas para navegadores Webkit) */
     width: 20px; /* Define a largura do polegar */
     height: 20px; /* Define a altura do polegar */
     background-color: var(--cor002); /* Define a cor de fundo do polegar */
     border-radius: 50%; /* Define o raio do canto para o polegar para torná-lo circular */
     cursor: pointer; /* Altera o cursor para uma mão quando o mouse estiver sobre o polegar */
-  }
+}
   
-  /* Estilização para a pista do input de tipo range quando o mouse está sobre ela */
-  input[type="range"]:hover {
+/* Estilização para a pista do input de tipo range quando o mouse está sobre ela */
+input[type="range"]:hover {
     background-color: #e0e0e0; /* Define a cor de fundo da pista quando o mouse está sobre ela */
-  }
+}
   
-  /* Estilização para a pista do input de tipo range quando está ativo (clicado) */
-  input[type="range"]:active {
+/* Estilização para a pista do input de tipo range quando está ativo (clicado) */
+input[type="range"]:active {
     background-color: #d0d0d0; /* Define a cor de fundo da pista quando está ativo */
-  }
+}
   
   
-
-  hr {
+/* DIVISOR*/
+hr {
     width: 100%;
     height: 1px;
     background-color: var(--cor005);
 
     margin: 10px 0px;
     border-radius: 50px;
-  }
+}
 
-  #divLitros {
+
+
+/* RESULTADO - GARRAFAS */
+#divLitros {
     display: flex;
     justify-content: center;
     align-items: center;
-  }
-  h5 {
+}
+h5 {
     text-align: center;
     font-family: var(--fonte01);
     font-size: 1.3em;
     color: #25D0BC;
 
-    margin: 20px 0px;
+    margin: 15px 0px;
+}
+
+
+#garrafas {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    margin-top: 15px;
+
+    height: 150px;
+    margin-bottom: -30px;
+
+    background-image: url(../imagens/water/2litros.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: bottom center;
+}
+
+div#calculado > p {
+    background-color: rgba(255, 255, 255, 0.975);
+    padding: 8px 18px;
+    border-radius:  50px;
+
+
+    font-family: var(--fonte02);
+    font-size: 1.15em;
+    font-weight: bold;
+    color: var(--cor003);
+    font-variant: small-caps;
+}
+
+
+
+
+/* GUIA PRÁTICO - FORMS */
+div.infos > h3 {
+    font-family: var(--fonte02);
+    font-size: 2.85em;
+    color: var(--cor002);
+    -webkit-text-stroke: 1px var(--cor002);
+    
+    margin-bottom: 15px;
+}
+
+/* BARRA DE REGRESSÃO */
+.barra-de-regressao {
+    width: 100%;
+    height: 20px;
+    background-color: var(--cor005);
+
+    border-radius: 50px;
+
+    margin-bottom: 20px;
+}
+
+.regresso {
+    width: 100%;
+    height: 20px;
+    background-color: var(--cor001);
+
+    border-radius: 50px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.downloads-restantes {
+    font-size: 0.55em;
+    color: var(--cor005);
+    font-family: var(--fonte01);
+    font-weight: 600;
+    font-variant: small-caps;
   }
