--- a/estilos/style.css
+++ b/estilos/style.css
@@ -756,7 +756,7 @@ div.infos > h3 {
     color: var(--cor002);
     -webkit-text-stroke: 0.2px var(--cor002);
 
-    margin-top: -10px;
+    margin-top: 0px;
 }
 
 
@@ -820,4 +820,64 @@ button#downLoad:hover {
 }
 button#downLoad:active {
     background-color: var(--cor003);
+}
+
+
+/* FOOTER */
+footer > div.aba {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#imgSentado {
+    width: 200px;    
+    height: 200px;
+    
+    flex-basis: 55%;
+
+
+}
+footer div.info {
+    flex-basis: 45%;
+    
+    text-align: right;
+}
+
+h6 {
+    font-family: var(--fonte02);
+    font-size: 2.85em;
+    -webkit-text-stroke: 1px var(--cor002);
+    color: var(--cor002);
+}
+footer p {
+    margin: 10px 0px;
+}
+
+
+div.btSocial {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    column-gap: 15px;
+}
+#email {
+    height: 30px;
+    width: 30px;
+    background-image: url(../imagens/emailLogo.png);
+
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+#instagram {
+    height: 30px;
+    width: 30px;
+    background-image: url(../imagens/instagramLogo.png);
+
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+#space {
+    height: 100px;
 }
