--- a/estilos/style.css
+++ b/estilos/style.css
@@ -684,7 +684,7 @@ h5 {
     height: 150px;
     margin-bottom: -30px;
 
-    background-image: url(../imagens/water/2litros.png);
+    background-image: url(../imagens/water/Bottles2.5l.png);
     background-repeat: no-repeat;
     background-size: contain;
     background-position: bottom center;
